Thu Sep 15 01:44:10 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/tk/*: Change encoding from EUC-JP to UTF-8

Wed Sep 14 11:43:37 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_fd_rcopy): added an argument guard.
	  Patch by NAKAMURA Usaku. [Bug #5306] [ruby-core:39435]

Tue Sep 13 20:21:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pstore.rb, test/test_pstore.rb: suppress warnings with -v.

	* lib/pstore.rb (PStore): always open in binary mode even if
	  default encodings are set.  [Bug #5311] [ruby-core:39503]

Tue Sep 13 05:37:15 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (Init_IO): update BINARY comment.  it should not change the
	  encoding of the result to ASCII-8BIT.  [ruby-talk:387719]

Mon Sep 12 19:55:00 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_select): fix to ignore an argument
	  modification of rb_thread_fd_select().
	  based on a patch by Eric Wong. [Bug #5306] [ruby-core:39435]
	* thread.c (rb_fd_rcopy): New. for reverse fd copy.

	* test/-ext-/old_thread_select/test_old_thread_select.rb
	(test_old_select_false_positive): test for bug5306.

	* ext/-test-/old_thread_select/old_thread_select.c (fdset2array):
	  New. convert fdsets to array.
	* ext/-test-/old_thread_select/old_thread_select.c (old_thread_select):
	  return 'read', 'write', 'except' argument of rb_thread_select()
	  to ruby script.

Mon Sep 12 13:38:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT, README.EXT.ja (2.2.2), parse.y (rb_check_id): add
	  documents for rb_check_id().

Mon Sep 12 12:53:39 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rake/file_list.rb (Rake::FileList#egrep): there is no need to
	  open files in binary mode.
	  see more details in https://github.com/jimweirich/rake/issues/74

Mon Sep 12 12:42:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_exception.rb (TestException#test_exit_success_p):